# BeatCrate

./: .gitignore  CLAUDE.md  CMakeLists.txt  HANDOFF.md  LICENSE  README.md  debug_server.py  mod.template.json  qpm.json
.github/workflows/: build.yml
assets/: AMPlaylistTableViewCell.bsml  AMTrackTableViewCell.bsml  BSMapTableViewCell.bsml  BeatSaverResultsViewController.bsml  LibraryViewController.bsml  MainViewController.bsml  PlaylistTracksViewController.bsml  SearchViewController.bsml  ServiceSelectViewController.bsml
cmake/: assets.cmake  qpm.cmake  utils.cmake
cmake/targets/: android-ndk.cmake
include/: Configuration.hpp  Log.hpp  main.hpp
include/AppleMusic/: AppleMusicClient.hpp  Models.hpp
include/BeatSaver/: BeatSaverClient.hpp
include/UI/FlowCoordinators/: AppleMusicFlowCoordinator.hpp
include/UI/TableViewCells/: AMPlaylistTableViewCell.hpp  AMTrackTableViewCell.hpp  BSMapTableViewCell.hpp
include/UI/TableViewDataSources/: AMPlaylistTableViewDataSource.hpp  AMTrackTableViewDataSource.hpp  BSMapTableViewDataSource.hpp
include/UI/ViewControllers/: BeatSaverResultsViewController.hpp  LibraryViewController.hpp  MainViewController.hpp  PlaylistTracksViewController.hpp  SearchViewController.hpp  ServiceSelectViewController.hpp
src/: Configuration.cpp  main.cpp
src/AppleMusic/: AppleMusicClient.cpp
src/BeatSaver/: BeatSaverClient.cpp
src/UI/FlowCoordinators/: AppleMusicFlowCoordinator.cpp
src/UI/TableViewCells/: AMPlaylistTableViewCell.cpp  AMTrackTableViewCell.cpp  BSMapTableViewCell.cpp
src/UI/TableViewDataSources/: AMPlaylistTableViewDataSource.cpp  AMTrackTableViewDataSource.cpp  BSMapTableViewDataSource.cpp
src/UI/ViewControllers/: BeatSaverResultsViewController.cpp  LibraryViewController.cpp  MainViewController.cpp  PlaylistTracksViewController.cpp  SearchViewController.cpp  ServiceSelectViewController.cpp
